// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutSharedHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-da774e64-0 fgBWrW djyvKT iAkSYx dsCEjX"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH gEkaeR"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-da774e64-1 fgBWrW joHkzz dGlNMa dQERjo"
        >
          <div
            class="sc-fqkvVR jqqmXN"
          >
            <img
              alt="Oak logo"
              class="sc-dcJsrY jRtmJB"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="http://example.com/image.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AboutSharedHeader renders correctly with loop illustration 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-da774e64-0 fgBWrW djyvKT iAkSYx dsCEjX"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH gEkaeR"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-da774e64-1 fgBWrW joHkzz dGlNMa dQERjo"
        >
          <div
            class="sc-fqkvVR jPtDlR"
            data-testid="about-shared-loop"
          >
            <img
              alt=""
              class="sc-dcJsrY hbHRtr"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1740665310/OWA/ui-graphics/looping-line-5_vdknco.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
